--- a/devops/stacks/docker-compose-local.yml
+++ b/devops/stacks/docker-compose-local.yml
@@ -25,20 +25,18 @@ services:
     build:
       context: ../../backend
     environment:
-      SITE: Plone
-      ADDITIONAL_PROFILES: "plonedemo:default,plonedemo:initial"
-      RELSTORAGE_DSN: "dbname='plone' user='plone' host='db' password='plone'"
+      ZEO_ADDRESS: zeo:8100
+    ports:
+      - "8080:8080"
     depends_on:
-      - db
+      - zeo
 
-  db:
-    image: postgres
-    environment:
-      POSTGRES_USER: plone
-      POSTGRES_PASSWORD: plone
-      POSTGRES_DB: plone
+  zeo:
+    image: plone/plone-zeo:latest
     volumes:
-    - data:/var/lib/postgresql/data
+      - data:/var/lib/zeo/data
+    ports:
+      - "8100:8100"
 
 volumes:
   data: {}
