--- a/devops/stacks/default.conf
+++ b/devops/stacks/default.conf
@@ -7,7 +7,7 @@ upstream frontend {
 
 server {
   listen 80  default_server;
-  server_name  localhost;
+  server_name  192.168.10.179;
 
   location ~ /\+\+api\+\+($|/.*) {
       rewrite \+\+api\+\+\/?($|/.*) /VirtualHostBase/http/$server_name/Plone/++api++/VirtualHostRoot/$1 break;
